Created basic parser that follows PEMDAS without negation.

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                 <button id="ac">AC</button>
                 <button id="bracket">( )</button>
                 <button id="percent">%</button>
-                <button class="operator" id="divide">÷</button>
+                <button class="operator" id="/">÷</button>
             </div>
             <div class="row1">
                 <button class="number" id="7">7</button>
                 <button class="number" id="8">8</button>
                 <button class="number" id="9">9</button>
-                <button class="operator" id="multiply">x</button>
+                <button class="operator" id="*">x</button>
             </div>
             <div class="row2">
                 <button class="number" id="4">4</button>
