--- a/index.html
+++ b/index.html
@@ -6,31 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     </link>
-    <script src="script.js" defer="true"></script>
+    <script type="module" src="eval.js"></script>
+    <script type="module" src="script.js" defer="true"></script>
     <title>Calculator</title>
 </head>
 
 <body>
     <div class="container">My Calculator!
-        <div class="display">0</div>
+        <div class="display">
+            <div id="input"></div>
+            <div id="ans"></div>
+        </div>
         <div class="keypad">
             <div class="row0">
                 <button id="ac">AC</button>
                 <button id="bracket">( )</button>
                 <button id="percent">%</button>
-                <button class="operator" id="/">÷</button>
+                <button class="operator" id="divide">÷</button>
             </div>
             <div class="row1">
                 <button class="number" id="7">7</button>
                 <button class="number" id="8">8</button>
                 <button class="number" id="9">9</button>
-                <button class="operator" id="*">x</button>
+                <button class="operator" id="multiply">x</button>
             </div>
             <div class="row2">
                 <button class="number" id="4">4</button>
                 <button class="number" id="5">5</button>
                 <button class="number" id="6">6</button>
-                <button class="operator" id="minus">-</button>
+                <button class="operator" id="subtract">-</button>
             </div>
             <div class="row3">
                 <button class="number" id="1">1</button>
@@ -40,7 +44,7 @@
             </div>
             <div class="row4">
                 <button class="number" id="0">0</button>
-                <button class="meta" id=".">.</button>
+                <button class="meta" id="decimal">.</button>
                 <button id="del">del</button>
                 <button id="equal">=</button>
             </div>
