Added color and style to calculator

--- a/index.html
+++ b/index.html
@@ -12,37 +12,37 @@
 </head>
 
 <body>
-    <div class="container">My Calculator!
+    <div class="container">
         <div class="display">
             <div id="input"></div>
             <div id="ans"></div>
         </div>
         <div class="keypad">
-            <div class="row0">
+            <div class="row">
                 <button id="ac">AC</button>
                 <button id="bracket">( )</button>
                 <button id="percent">%</button>
                 <button class="operator" id="divide">÷</button>
             </div>
-            <div class="row1">
+            <div class="row">
                 <button class="number" id="7">7</button>
                 <button class="number" id="8">8</button>
                 <button class="number" id="9">9</button>
                 <button class="operator" id="multiply">x</button>
             </div>
-            <div class="row2">
+            <div class="row">
                 <button class="number" id="4">4</button>
                 <button class="number" id="5">5</button>
                 <button class="number" id="6">6</button>
                 <button class="operator" id="subtract">-</button>
             </div>
-            <div class="row3">
+            <div class="row">
                 <button class="number" id="1">1</button>
                 <button class="number" id="2">2</button>
                 <button class="number" id="3">3</button>
                 <button class="operator" id="add">+</button>
             </div>
-            <div class="row4">
+            <div class="row">
                 <button class="number" id="0">0</button>
                 <button class="meta" id="decimal">.</button>
                 <button id="del">del</button>
