Fixed formatting for input display

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <body>
     <div class="container">
         <div class="display">
-            <div id="input"></div>
+            <div id="inputContainer">
+                <div>
+                    <a id="input"></a>
+                </div>
+            </div>
             <div id="ans"></div>
         </div>
         <div class="keypad">
