Added formatting to display answer and auto-resize calculator to fit window.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="calculator">
         <div class="display">
             <div id="inputContainer">
                 <div>
@@ -53,7 +53,6 @@
                 <button id="equal">=</button>
             </div>
         </div>
-    </div>
     </div>
 </body>
 
