--- a/index.html
+++ b/index.html
@@ -23,34 +23,34 @@
         </div>
         <div class="keypad">
             <div class="row">
-                <button id="ac">AC</button>
-                <button id="bracket">( )</button>
-                <button id="percent">%</button>
-                <button class="operator" id="divide">÷</button>
+                <button id="ac"  key="Delete">AC</button>
+                <button id="bracket" key="()">( )</button>
+                <button id="percent" key="%">%</button>
+                <button class="operator" key="/" id="divide">÷</button>
             </div>
             <div class="row">
-                <button class="number" id="7">7</button>
-                <button class="number" id="8">8</button>
-                <button class="number" id="9">9</button>
-                <button class="operator" id="multiply">x</button>
+                <button class="number" key="7" id="7">7</button>
+                <button class="number" key="8" id="8">8</button>
+                <button class="number" key="9" id="9">9</button>
+                <button class="operator" key="*" id="multiply">x</button>
             </div>
             <div class="row">
-                <button class="number" id="4">4</button>
-                <button class="number" id="5">5</button>
-                <button class="number" id="6">6</button>
-                <button class="operator" id="subtract">-</button>
+                <button class="number" key="4" id="4">4</button>
+                <button class="number" key="5" id="5">5</button>
+                <button class="number" key="6" id="6">6</button>
+                <button class="operator" key="-" id="subtract">-</button>
             </div>
             <div class="row">
-                <button class="number" id="1">1</button>
-                <button class="number" id="2">2</button>
-                <button class="number" id="3">3</button>
-                <button class="operator" id="add">+</button>
+                <button class="number" key="1" id="1">1</button>
+                <button class="number" key="2" id="2">2</button>
+                <button class="number" key="3" id="3">3</button>
+                <button class="operator" key="+" id="add">+</button>
             </div>
             <div class="row">
-                <button class="number" id="0">0</button>
-                <button class="meta" id="decimal">.</button>
-                <button id="del">del</button>
-                <button id="equal">=</button>
+                <button class="number" key="0" id="0">0</button>
+                <button class="meta" key="." id="decimal">.</button>
+                <button id="del" key="Backspace">Del</button>
+                <button id="equal" key="=">=</button>
             </div>
         </div>
     </div>
